# ChangeLog for dev-libs/libmail
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 May 2009; Dimitris Mandalidis (mandas) <mandas@users.sourceforge.net>
  +libmail-0.2.ebuild, +metadata.xml:
  New Ebuild for bug 270065
