@@ -1,4 +1,6 @@
 DIST libmail-0.2.tar.bz2 247756 RMD160 d45e59328ccd581df69776e8c4d75b78dc14d45d SHA1 dab0292cbde51fb80e45b0f3ec0a6b4ae2bd89fe SHA256 9bb13e2419a31a8bb306b6cfa4a9cbd06ef9904c3282152de17b76b3813f5be4
+DIST libmail-0.3.tar.bz2 271946 RMD160 050bfb7edec59562625c9f7c6adf4cb0de666d28 SHA1 bf89213e71128811f4873c2e12b811cb55a0ca95 SHA256 b07db69866ae649d0489b35a38a11692b6e404078931ec384973134b3913db51
 EBUILD libmail-0.2.ebuild 610 RMD160 de90ea5e851a01f01c4cead90700e47b9ab1d0d6 SHA1 31d1260412ab177aba14da3378912732a989630b SHA256 1e9a329a983b8446b0ab1701291e56c3a35a105aaa4af364062378f88749dd0e
-MISC ChangeLog 259 RMD160 36953925f0dc682e32b694048d85ec61803af2ed SHA1 74b14d7986eb441fb3fcd4d5f80974151ea6aa7a SHA256 c84d61738f4786e58c0a77605110bd7d35ef5f1ae7e7c3ff602d3ff7242c6a2c
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+EBUILD libmail-0.3.ebuild 771 RMD160 59b8bd0009b2360917f46c9b0cd37e326c8e0e3a SHA1 ba3951103c815b26e91147d4986404fcdcfbdd2d SHA256 68ae114cef47bf716b38ccd263e03b414cfa01321bf273d6733def2fe9a9796e
+MISC ChangeLog 434 RMD160 d40a5f2d5db3086049e1855ee29932fb851dd6c4 SHA1 ebae1d494dff0f5ad26def30c946e7325c2cf038 SHA256 0c3866640fb181b779acea67a1746dab7786c217fc659745cf00d8bf102a8850
+MISC metadata.xml 252 RMD160 c3fae38959ddd426e8b57bc4ec29cff689ffc1d6 SHA1 9c859dee3f5b0af1799767e7f030fcac98bd4d8a SHA256 ba414ab02f5d1ba798b3466f8b2a301c341609c59044898496dbd8a302ba8bb2
