@@ -1,0 +1,32 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+DESCRIPTION="a mail handling library"
+HOMEPAGE="http://libmail.sourceforge.net"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~x86"
+IUSE="apop debug gnutls profile sasl"
+
+DEPEND="
+	gnutls? ( >=net-libs/gnutls-2 )
+	sasl? ( >=dev-libs/cyrus-sasl-2 )"
+RDEPEND="${DEPEND}"
+
+src_compile() {
+	econf \
+		$(use_enable apop) \
+		$(use_enable debug ) \
+		$(use_enable gnutls tls) \
+		$(use_enable profile ) \
+		$(use_enable sasl) || die "econf failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "Install failed"
+	dodoc AUTHORS ChangeLog NEWS README TODO || die "dodoc failed"
+}
